--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "umeacademy-f",
+  "name": "umeacademy-fe",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,7 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "antd": "^5.20.5",
+    "@ant-design/icons": "^5.4.0",
+    "antd": "^5.20.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1"
@@ -25,8 +26,8 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
-    "postcss": "^8.4.45",
-    "sass-embedded": "^1.78.0",
+    "postcss": "^8.4.41",
+    "sass-embedded": "^1.77.8",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
