--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.20.3",
     "apexcharts": "^3.53.0",
     "axios": "^1.7.7",
+    "date-fns": "^4.1.0",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.3.1",
